--- a/src/index.css
+++ b/src/index.css
@@ -6,17 +6,15 @@
   padding: 0;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(28, 28, 28, 0.9);
   text-decoration: none;
   scroll-behavior: smooth;
 }
 
 body {
-  background: black;
-  /* background: linear-gradient(109.6deg, rgba(0, 0, 0, 0.93) 11.2%, rgb(63, 61, 61) 78.9%); */
-}
-
-::-webkit-scrollbar {
+  background: linear-gradient(to bottom, #e6f7ff, #ffffff);
+  color: #1a1a1a;
+::-webkit-scrollbar  {
 
   display: none;
 }
