--- a/src/components/NavbarStyle.css
+++ b/src/components/NavbarStyle.css
@@ -19,13 +19,13 @@
     width: 100%;
     height: 100%;
     font-size: 50px;
-    color: #fff;
+    color: #1a1a1a;
     font-weight: 600;
 }
 
 .header .logo .logo-img span {
     font-weight: 600;
-    color: #F94892;
+    color: #5b9bd5;
 }
 
 .header .logo .logo-img .blink {
@@ -34,14 +34,14 @@
 
 @keyframes blink {
     0% {
-        color: #F94892;
+        color: #5b9bd5;
     }
 
     50% {
         color: transparent;
     }
     100% {
-        color: #F94892;
+        color: #5b9bd5;
         
     }
 }
@@ -67,7 +67,7 @@
     cursor: pointer;
 }
 .nav-menu li .navLink:hover {
-    color: #F94892;
+    color: #5b9bd5;
 }
 
 .nav-menu li {
@@ -75,7 +75,7 @@
 }
 
 .nav-menu li:hover {
-    color: #F94892;
+    color: #5b9bd5;
     transform: scale(1.3) rotate(270deg);
 }
 
@@ -97,7 +97,7 @@
 
 .header .social-links .social:hover {
     transform: scale(1.5);
-    fill: #F94892;
+    fill: #5b9bd5;
 }
 
 
@@ -137,7 +137,7 @@
         height: 85vh;
         right: -100%;
         transition: 0.5s;
-        background: rgb(18, 18, 18);
+        background: rgba(255, 255, 255, 0.8);
     }
 
     .header .nav-menu.active {
@@ -167,7 +167,7 @@
         justify-content: space-evenly;
         transition: 0.5s;
         z-index: 110;
-        background: rgb(18, 18, 18);
+        background: rgba(255, 255, 255, 0.8);
     }
 
     .header .social-links.active {
